--- a/django/django_test/templates/base.html
+++ b/django/django_test/templates/base.html
@@ -591,6 +591,7 @@ If you have selected home delivery, we will send you an email confirming that yo
 <!--End STICKY -->
 </div>
 
+<br><br><br><br>
 
     <div class="container">
       <div id="morphsearch" class="morphsearch">
@@ -601,6 +602,48 @@ If you have selected home delivery, we will send you an email confirming that yo
         <div class="morphsearch-content">
            {% csrf_token %}
           <div id = "search-results"></div>
+
+          <div class="dummy-column">
+            <h2>People</h2>
+            <a class="dummy-media-object" href="http://twitter.com/SaraSoueidan">
+              <img class="round" src="http://0.gravatar.com/avatar/81b58502541f9445253f30497e53c280?s=50&d=identicon&r=G" alt="Sara Soueidan"/>
+              <h3>Sara Soueidan</h3>
+            </a>
+            <a class="dummy-media-object" href="http://twitter.com/rachsmithtweets">
+              <img class="round" src="http://0.gravatar.com/avatar/48959f453dffdb6236f4b33eb8e9f4b7?s=50&d=identicon&r=G" alt="Rachel Smith"/>
+              <h3>Rachel Smith</h3>
+            </a>
+            <a class="dummy-media-object" href="http://www.twitter.com/peterfinlan">
+              <img class="round" src="http://0.gravatar.com/avatar/06458359cb9e370d7c15bf6329e5facb?s=50&d=identicon&r=G" alt="Peter Finlan"/>
+              <h3>Peter Finlan</h3>
+            </a>
+            <a class="dummy-media-object" href="http://www.twitter.com/pcridesagain">
+              <img class="round" src="http://1.gravatar.com/avatar/db7700c89ae12f7d98827642b30c879f?s=50&d=identicon&r=G" alt="Patrick Cox"/>
+              <h3>Patrick Cox</h3>
+            </a>
+            <a class="dummy-media-object" href="https://twitter.com/twholman">
+              <img class="round" src="http://0.gravatar.com/avatar/cb947f0ebdde8d0f973741b366a51ed6?s=50&d=identicon&r=G" alt="Tim Holman"/>
+              <h3>Tim Holman</h3>
+            </a>
+            <a class="dummy-media-object" href="https://twitter.com/shaund0na">
+              <img class="round" src="http://1.gravatar.com/avatar/9bc7250110c667cd35c0826059b81b75?s=50&d=identicon&r=G" alt="Shaun Dona"/>
+              <h3>Shaun Dona</h3>
+            </a>
+          </div>
+            <div class="dummy-column">
+            <h2>Popular</h2>
+            <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/08/05/page-preloading-effect/">
+              <img src="{% static "assets/images/PagePreloadingEffect.png" %}" alt="PagePreloadingEffect"/>
+              <h3>Page Preloading Effect</h3>
+            </a>
+          </div>
+          <div class="dummy-column">
+            <h2>Recent</h2>
+            <a class="dummy-media-object" href="http://tympanus.net/codrops/2014/10/07/tooltip-styles-inspiration/">
+              <img src="{% static "assets/images/TooltipStylesInspiration.png" %}" alt="TooltipStylesInspiration"/>
+              <h3>Tooltip Styles Inspiration</h3>
+            </a>
+          </div>
         </div><!-- /morphsearch-content -->
         <span class="morphsearch-close"></span>
 
