--- a/django/django_test/templates/home.html
+++ b/django/django_test/templates/home.html
@@ -3,16 +3,36 @@
 
 {% block sidebar %}
 
-<!--Carousel -->
+<!--Carousel 
 <div class="slk">
 	<div><img src="{% static "assets/images/f1.jpg" %}"  width="100%"></div>
 	<div><img src="{% static "assets/images/f2.jpg" %}"  width="100%"></div>
 		<div><img src="{% static "assets/images/f3.jpg" %}"  width="100%"></div> 
 </div>
+-->
+
 
 {% endblock %}
 
 {% block content %}
+
+
+<div class="container">	
+			<header class="clearfix">
+			<br><br><div class = "panel"><span>Recent Arrivals</span></div>
+			</header>
+			<div id="cbp-fwslider" class="cbp-fwslider">
+				<ul>
+
+					<li><a href="#"><img src="{% static "assets/FullWidthImageSlider/images/1.jpg" %}" alt="img01"/></a></li>
+					<li><a href="#"><img src="{% static "assets/FullWidthImageSlider/images/2.jpg" %}" alt="img02"/></a></li>
+					<li><a href="#"><img src="{% static "assets/FullWidthImageSlider/images/3.jpg" %}" alt="img03"/></a></li>
+					<li><a href="#"><img src="{% static "assets/FullWidthImageSlider/images/4.jpg" %}" alt="img04"/></a></li>										
+				</ul>
+			</div>
+</div>
+
+
 
 					<!--<h2>Language is: {{language}} </h2>
 					<h2>Session Language is: {{session_language}} </h2>-->
