--- a/django/django_test/templates/home.html
+++ b/django/django_test/templates/home.html
@@ -1,6 +1,24 @@
 {% extends "base.html" %}
 {% load staticfiles %}
 
+
+{% block imports %}
+
+<!--Slick-->
+<link rel="stylesheet" type="text/css" href="{% static "assets/slick/slick.css" %}"/>
+<link rel="stylesheet" type="text/css" href="{% static "assets/slick/slick-theme.css" %}"
+/>
+
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.css"/>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.5.0/slick.min.js"></script>
+
+<!--FullWidthImageSlider-->
+    <link rel="stylesheet" type="text/css" href="{% static "assets/FullWidthImageSlider/css/default.css" %}" />
+    <link rel="stylesheet" type="text/css" href="{% static "assets/FullWidthImageSlider/css/component.css" %}" />
+    <script src="{% static "assets/FullWidthImageSlider/js/modernizr.custom.js" %}"></script>
+{% endblock %}
+
+
 {% block sidebar %}
 
 <!--Carousel 
@@ -44,4 +62,68 @@
 {% endif %}
 
 {% endblock %}
+
+
+{% block btmimports %}
+<!--FullWidthImageSlider-->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="{% static "assets/FullWidthImageSlider/js/jquery.cbpFWSlider.min.js" %}"></script>
+    <script>
+$( function() {
+        /*
+        - how to call the plugin:
+        $( selector ).cbpFWSlider( [options] );
+        - options:
+        {
+          // default transition speed (ms)
+          speed : 500,
+          // default transition easing
+          easing : 'ease'
+        }
+        - destroy:
+        $( selector ).cbpFWSlider( 'destroy' );
+        */
+
+        $( '#cbp-fwslider' ).cbpFWSlider();
+
+      } );
+    </script>
+
+<!--Slick-->
+<script type="text/javascript" src="{% static "assets/slick/slick.min.js" %}"></script>
+
+<!--Slick-->
+  <script type="text/javascript">
+    $(document).ready(function(){
+
+
+ $('.slk').slick({
+  infinite: true,
+  slidesToShow: 1,
+  slidesToScroll: 1,
+  autoplay: true,
+  autoplaySpeed: 2000,
+  pauseOnHover: false,
+});
+
+
+$('.slk-article').slick({
+  dots: true,
+  infinite: true,
+  speed: 300,
+  centerMode: true,
+  slidesToShow: 3,
+  slidesToScroll: 1,
+  autoplay: true,
+  autoplaySpeed: 2000,
+  pauseOnHover: false,
+});
+        
+
+
+    });
+  </script>
+
+{% endblock %}
+
 
